fixed the cards alignment, removed the border, activated button hover…

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,8 @@ body {
   font-size: 14px;
   line-height: 20px;
   margin-top: 3px;
+  border-radius: 8px;
+  height: 12px;
 }
 
 .menu {
@@ -72,35 +74,33 @@ body {
   margin-top: 3px;
 }
 
-.nav-bars > nav:hover {
-  color: #7f8cff;
+.logo-show:hover {
+  color: #fff;
   cursor: pointer;
+  background-color: #6070ff;
 }
 
 .link {
   display: flex;
   align-items: flex-start;
-  color: #7f8cff;
+  color: #396df2;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 24px;
-  padding-left: 2px;
-  cursor: pointer;
-  width: 130px;
+  padding-left: 1px;
+  width: 112px;
   border: none;
   background-color: white;
   border-radius: 8px;
-  justify-content: flex-start;
+  justify-content: center;
   margin-left: 22px;
 }
 
 .link:hover {
   background-color: #6070ff;
-}
-
-.link p:hover {
   color: #fff;
+  cursor: pointer;
 }
 
 .bio {
@@ -124,6 +124,18 @@ body {
   display: grid;
   width: 350px;
   height: 650px;
+  padding: 15px;
+  border-radius: 20px;
+  border: 2px solid white;
+  align-items: center;
+  margin-bottom: 100px;
+  background-color:white;
+}
+
+.middle-section-container2 {
+  display: grid;
+  width: 350px;
+  height: 700px;
   padding: 15px;
   border-radius: 20px;
   border: 2px solid white;
@@ -187,27 +199,21 @@ body {
 
 .project-link {
   border: 1px solid blue;
-  width: 150px;
-  height: 50px;
-  padding: 12px;
+  width: 95px;
+  height: 35px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   border-radius: 12px;
   background-color: #fff;
-}
-
-.project-link > h1 {
   color: #396df2;
-}
-
-.project-link h1:hover {
-  color: #fff;
-  cursor: pointer;
+  font-size: 16px;
 }
 
 .project-link:hover {
   background-color: #6070ff;
+  color: #fff;
+  cursor: pointer;
 }
 
 .technology li {
@@ -218,31 +224,21 @@ body {
 .about-myself-link {
   border: none;
   background-color: white;
-  color: #7f8cff;
+  color: #396df2;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 24px;
   padding-left: 2px;
   cursor: pointer;
-  width: 130px;
+  width: 115px;
   display: flex;
-}
-
-.about-myself-link p {
-  display: flex;
-  justify-content: flex-start;
-  border: none;
 }
 
 .about-myself-link:hover {
-  color: #6070ff;
+  color: #fff;
   background-color: #7f8cff;
   border-radius: 5px;
-}
-
-.about-myself-link p:hover {
-  color: #fff;
 }
 
 .about-myself {
@@ -253,6 +249,7 @@ body {
   align-items: center;
   margin-bottom: 100px;
   background-color:white;
+  height: 1100px;
 }
 
 .about-myself h1 {
@@ -268,31 +265,22 @@ body {
   height: 15px;
 }
 
-.about-myself-link p {
-  color: #7f8cff;
-}
-
 .resume {
   border: 1px solid #396df2;
   background-color: #fff;
-  width: 138px;
+  width: 111px;
   height: 30px;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.resume p {
   color: #396df2;
+  font-size: 15px;
 }
 
 .resume:hover {
   background-color: #6070ff;
   cursor: pointer;
-}
-
-.resume p:hover {
   color: #fff;
 }
 
@@ -311,15 +299,17 @@ body {
   gap: 12px;
   display: flex;
   flex-direction: column;
+  font-size: 14px;
+
 }
 
 .about-myself-ul span {
   margin-left: 15px;
 }
 
-.frameworks {
-  display: grid;
-  grid-template-columns: auto auto;
+.frameworks li {
+  display: flex;
+  /* grid-template-columns: auto auto; */
   align-items: center;
   justify-content: space-between;
 }
@@ -329,7 +319,7 @@ body {
   color: #253858;
 }
 
-.skills {
+.skills li {
   display: grid;
   grid-template-columns: auto auto;
   align-items: center;
@@ -355,6 +345,9 @@ body {
   align-items: center;
   background-color: #fff;
   border: none;
+  font-size: 18px;
+  color: #396df2;
+  border-radius: 6px;
 }
 
 .language img {
@@ -362,6 +355,11 @@ body {
   justify-content: flex-end;
   align-items: center;
   margin-right: 50px;
+}
+
+.language:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
 
 
